Some theming fixes (#934)
* fix bug no bgImg on default theme

* some small fixes

* gallery bg

* emoji picker border increase contrast a bit

* Fix scrollbar

* - Replace `scrollBar` with `scrollbar`
- Fix scrollbar color in light theme
- Fix some background colors not being #fff

* Fix dialog background color

* Make context menu better looking

* Improve hover of chatlistitems

--- a/scss/modules/_bp3-overwrites.scss
+++ b/scss/modules/_bp3-overwrites.scss
@@ -51,8 +51,17 @@
 //   box-shadow: 0 0 0 1px rgba(16,22,26,.4),inset 0 1px 2px rgba(16,22,26,.2);
 // }
 
+.bp3-button.bp3-minimal {
+  color: var(--bp3ButtonText);
+}
+.bp3-button.bp3-minimal:hover {
+  color: inherit; // todo adjust this to be an extra var 
+}
+
 .bp3-dialog-header {
   background-color: var(--bp3DialogHeaderBg);
+  // We should have one variable for dialog/context menu border radius
+  border-radius: 2px 2px 0 0;
 }
 
 .bp3-input {
@@ -88,4 +97,21 @@
 .bp3-menu {
   background-color: var(--bp3MenuBg);
   color: var(--bp3MenuText);
+}
+
+.bp3-popover .bp3-popover-content {
+  background: unset;
+}
+
+.bp3-popover {
+  -webkit-box-shadow: none;
+  box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.1), 0 2px 4px rgba(16, 22, 26, 0.2), 0 8px 24px rgba(16, 22, 26, 0.2); // TODO include color into theming
+}
+
+.bp3-popover .bp3-popover-arrow-fill {
+  fill: var(--bp3MenuBg);
+}
+
+.bp3-menu-divider {
+  border-top: 1px solid rgba(16, 22, 26, 0.15); // TODO include color into theming
 }
